--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,23 @@
 <header class="header">
-  <img class="branding" src="assets/cook-book.svg" alt="Cook Book App" />
+  <img class="branding" src="assets/brunchifyblack.svg" alt="Brunchify Logo" />
   <nav class="nav-bar">
     <ul class="nav-list">
-      <li><a class="link" routerLink="/recipe-list">Home</a></li>
-      <li><a class="link" routerLink="/favorites-page">Favorites</a></li>
+      <li>
+        <a class="link" routerLink="/recipe-list"
+          ><img class="home-icon" src="assets/cereal.svg" alt="home icon" />
+          Home</a
+        >
+      </li>
+      <li>
+        <a class="link" routerLink="/favorites-page"
+          ><img
+            class="favorite-icon"
+            src="assets/favorite.svg"
+            alt="favorite icon"
+          />
+          Favorites</a
+        >
+      </li>
     </ul>
   </nav>
 </header>
