--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -1,23 +1,44 @@
-<form>
-  <label for="searchTerm"></label>
-  <input type="text" name="searchTerm" id="searchTerm" />
-  <p>Dietary Restrictions</p>
-  <input type="checkbox" id="dairy-free" name="dairy-free" value="dairy-free" />
-  <label for="dairy-free">Dairy Free</label><br />
-  <input
-    type="checkbox"
-    id="gluten-free"
-    name="gluten-free"
-    value="gluten-free"
-  />
-  <label for="gluten-free">Gluten Free</label><br />
-  <input
-    type="checkbox"
-    id="high-protein"
-    name="high-protein"
-    value="high-protein"
-  />
-  <label for="high-protein">High Protein</label><br />
-  <input type="checkbox" id="vegetarian" name="vegetarian" value="vegetarian" />
-  <label for="vegetarian">Vegetarian</label><br />
-</form>
+<div class="search-container">
+  <form class="searchForm">
+    <label for="searchTerm"></label>
+    <input
+      class="border-gradient-purple"
+      type="text"
+      name="searchTerm"
+      id="searchTerm"
+      placeholder="What are you in the mood for? Search recipes!"
+    />
+    <p>Dietary Restrictions</p>
+    <div class="checkboxes">
+      <input
+        type="checkbox"
+        id="dairy-free"
+        name="dairy-free"
+        value="dairy-free"
+      />
+      <label for="dairy-free">Dairy Free</label><br />
+      <input
+        type="checkbox"
+        id="gluten-free"
+        name="gluten-free"
+        value="gluten-free"
+      />
+      <label for="gluten-free">Gluten Free</label><br />
+      <input
+        type="checkbox"
+        id="high-protein"
+        name="high-protein"
+        value="high-protein"
+      />
+      <label for="high-protein">High Protein</label><br />
+      <input
+        type="checkbox"
+        id="vegetarian"
+        name="vegetarian"
+        value="vegetarian"
+      />
+      <label for="vegetarian">Vegetarian</label><br />
+    </div>
+    <button class="get-recipes-btn">Get Recipes</button>
+  </form>
+</div>
