added api integration and footer

--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -1,1 +1,2 @@
-<app-search-criteria></app-search-criteria>
+<app-search-criteria> </app-search-criteria>
+<div *ngFor="let recipe of recipes">{{ recipe.label }}</div>
