--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -7,6 +7,7 @@
       name="searchTerm"
       id="searchTerm"
       placeholder="What are you in the mood for? Search recipes!"
+      ngModel
     />
     <p>Dietary Restrictions</p>
     <div class="checkboxes">
