--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,8 +1,12 @@
 <div class="recipe">
   <div class="recipe-card">
-    <p>{{ recipeRef.label }}</p>
-    <img src="{{ recipeRef.image }}" alt="Food Image" />
-    <p>{{ recipeRef.ingredientLines }}</p>
+    <p>{{ recipeRef.recipe.label }}</p>
+    <img src="{{ recipeRef.recipe.image }}" alt="Food Image" />
+    <p>
+      {{ recipeRef.recipe.ingredientLines }}
+    </p>
+    <p>{{ roundCalories() }} calories per serving</p>
+
     <button class="recipe-show">
       <img class="shopping-icon" src="assets/shopping-list.svg" alt="" /> Get
       Recipe
