--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -18,7 +18,7 @@
       type="range"
       min="100"
       max="2000"
-      name="rangeInput"
+      name="calories"
       oninput="this.nextElementSibling.value = this.value"
       ngModel
     />
