added eggy slider and started styling cards

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="recipe">
   <div class="recipe-card">
-    <p>{{ recipeRef.recipe.label }}</p>
+    <p class="recipe-title">{{ recipeRef.recipe.label }}</p>
     <img src="{{ recipeRef.recipe.image }}" alt="Food Image" />
     <p>
       {{ recipeRef.recipe.ingredientLines }}
