--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -13,7 +13,7 @@
       placeholder="What are you in the mood for? Search recipes!"
       ngModel
     />
-    <p>Max Calories per Serving</p>
+    <p>Max Calories per Serving <span class="slide">...just slide</span></p>
     <input
       type="range"
       min="0"
