--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,5 +1,6 @@
 <div class="recipe">
   <div class="recipe-card">
+    <button (click)="toggleFavorite(recipeRef.recipe)">Heart</button>
     <p class="recipe-title">{{ recipeRef.recipe.label }}</p>
     <img src="{{ recipeRef.recipe.image }}" alt="Food Image" />
     <p>
