--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -2,8 +2,8 @@
 <app-search-criteria (submitEvent)="search($event.searchTerm, $event.calories)">
 </app-search-criteria>
 <app-card
-  class="container"
   *ngFor="let recipe of recipeData?.hits"
   [recipeRef]="recipe"
+  (heartEvent)="toggleFavorite($event)"
 ></app-card>
 <app-footer></app-footer>
