added dietary restriction filter high fiber the only one not working also added form reset on submit

--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
-<app-search-criteria (submitEvent)="search($event.searchTerm, $event.calories)">
+<app-search-criteria
+  (submitEvent)="search($event.searchTerm, $event.calories, $event.diet)"
+>
 </app-search-criteria>
 <app-card
   *ngFor="let recipe of recipeData?.hits"
