added styles to favorites page

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -16,7 +16,7 @@
     />
     <p [hidden]="!isShow">
       {{ recipeRef.recipe.ingredientLines }}
-      <a class="recipe-link" href="{{ recipeRef.recipe.url }}"
+      <a class="recipe-link" href="{{ recipeRef.recipe.url }}" target="_blank"
         >Link To Full Recipe</a
       >
     </p>
