--- a/src/app/favorites-page/favorites-page.component.html
+++ b/src/app/favorites-page/favorites-page.component.html
@@ -1,7 +1,15 @@
 <app-header></app-header>
 
-<div *ngFor="let favorite of favorites">
-  <button (click)="deleteFavorite(favorite)">Remove Heart</button>
+<div class="favorite-container" *ngFor="let favorite of favorites">
+  <img
+    class="heart"
+    (click)="deleteFavorite(favorite)"
+    src="assets/broken-heart (1).svg"
+    alt="Broken Heart"
+  />
   <p>{{ favorite.label }}</p>
-  <img src="{{ favorite.image }}" alt="Food Image" />
+  <a class="recipe-link" href="{{ favorite.url }}" target="_blank"
+    >Link To Full Recipe</a
+  >
+  <img class="food-img" src="{{ favorite.image }}" alt="Food Image" />
 </div>
