changed favorite delete heart

--- a/src/app/favorites-page/favorites-page.component.html
+++ b/src/app/favorites-page/favorites-page.component.html
@@ -4,7 +4,7 @@
   <img
     class="heart"
     (click)="deleteFavorite(favorite)"
-    src="assets/broken-heart (1).svg"
+    src="assets/goodbroken.svg"
     alt="Broken Heart"
   />
   <p>{{ favorite.label }}</p>
