--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -23,7 +23,7 @@
       ngModel
     />
     <output></output>
-    <p>Dietary Restrictions</p>
+    <p>Diet Preference</p>
     <select class="select-style" name="diet" id="diet" ngModel>
       <option value="balanced">Balanced</option>
       <option value="high-fiber">High Fiber</option>
