adjusted favorites style

--- a/src/app/favorites-page/favorites-page.component.html
+++ b/src/app/favorites-page/favorites-page.component.html
@@ -7,9 +7,11 @@
     src="assets/goodbroken.svg"
     alt="Broken Heart"
   />
-  <p>{{ favorite.label }}</p>
-  <a class="recipe-link" href="{{ favorite.url }}" target="_blank"
-    >Link To Full Recipe</a
-  >
-  <img class="food-img" src="{{ favorite.image }}" alt="Food Image" />
+  <div>
+    <p>{{ favorite.label }}</p>
+    <a class="recipe-link" href="{{ favorite.url }}" target="_blank"
+      >Link To Full Recipe</a
+    >
+    <img class="food-img" src="{{ favorite.image }}" alt="Food Image" />
+  </div>
 </div>
