updated page not found component

--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,12 @@
-<p>page-not-found works!</p>
+<app-header></app-header>
+<main class="page-not-found">
+  <p class="center">
+    Oops! This is probably not the page you're looking for, but there's no use
+    crying over spilled eggs!
+  </p>
+  <img
+    class="bg"
+    src="./assets/pexels-polina-tankilevitch-4110238.jpg"
+    alt=""
+  />
+</main>
