--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -25,6 +25,7 @@
     <output></output>
     <p>Diet Preference</p>
     <select class="select-style" name="diet" id="diet" ngModel>
+      <option value="">--Please choose an option--</option>
       <option value="balanced">Balanced</option>
       <option value="high-fiber">High Fiber</option>
       <option value="high-protein">High Protein</option>
