--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -45,6 +45,10 @@
 .active {
   display: none;
 }
-
-@media only screen and (min-width: 768px) {
+.burn-icon {
+  height: 25px;
+  width: 25px;
+}
+.calories {
+  font-size: 14px;
 }
