--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -10,6 +10,19 @@
   height: 200px;
   width: 200px;
 }
+.food-img:hover {
+  box-shadow: 0px 0px 25px #743ad5;
+  z-index: 2;
+  -webkit-transition: all 200ms ease-in;
+  -webkit-transform: scale(1.5);
+  -ms-transition: all 200ms ease-in;
+  -ms-transform: scale(1.5);
+  -moz-transition: all 200ms ease-in;
+  -moz-transform: scale(1.5);
+  transition: all 200ms ease-in;
+  transform: scale(1.5);
+}
+
 .recipe-title {
   font-size: 14px;
   font-weight: bold;
