--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <img class="branding" src="assets/brunchifyblack.svg" alt="Brunchify Logo" />
+  <img class="branding" src="assets/brunchifylogo.svg" alt="Brunchify Logo" />
   <nav class="nav-bar">
     <ul class="nav-list">
       <li>
