--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -10,6 +10,7 @@
   height: 200px;
   width: 200px;
 }
+
 .food-img:hover {
   box-shadow: 0px 0px 25px #743ad5;
   z-index: 2;
@@ -64,4 +65,10 @@
 }
 .calories {
   font-size: 14px;
+}
+@media only screen and (min-width: 768px) {
+  .recipe-card {
+    width: 200px;
+    margin: 20px;
+  }
 }
