--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer class="footer">
-  <p>Made by Mike Wilson & Alana Frank</p>
+  <p class="p-padded">Made by Mike Wilson & Alana Frank</p>
   <div id="edamam-badge" data-color="white"></div>
 </footer>
