--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -13,7 +13,9 @@
       placeholder="What are you in the mood for? Search recipes!"
       ngModel
     />
-    <p>Max Calories per Serving <span class="slide">...just slide</span></p>
+    <p class="p-padded">
+      Max Calories per Serving <span class="slide">...just slide</span>
+    </p>
     <input
       type="range"
       min="0"
@@ -23,7 +25,7 @@
       ngModel
     />
     <output></output>
-    <p>Diet Preference</p>
+    <p class="p-padded">Diet Preference</p>
     <select class="select-style" name="diet" id="diet" ngModel>
       <option value="">--Please choose an option--</option>
       <option value="balanced">Balanced</option>
