--- a/src/app/favorites-page/favorites-page.component.css
+++ b/src/app/favorites-page/favorites-page.component.css
@@ -33,7 +33,8 @@
   align-items: center;
   margin: auto 0;
 }
-.favorite-book {
+.favorite-book,
+.email-icon {
   height: 40px;
   width: 40px;
 }
